--- a/index.html
+++ b/index.html
@@ -3154,7 +3154,7 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
                 <div id="647c98c5-5909-4b5d-80bf-bc75ba1a352a" class="widget widget-messaging widget-messaging-messaging-1">
                     <div data-ux="Element" id="bs-3" class="x-el x-el-div c1-1 c1-2 c1-b c1-c c1-d c1-e c1-f c1-g">
                         <div data-ux="Block" class="x-el x-el-div c1-1 c1-2 c1-5p c1-cb c1-cc c1-cd c1-ce c1-cf c1-b c1-c c1-d c1-cg c1-e c1-f c1-g">
-                            <div data-ux="Block" data-aid="MESSAGING_FAB" data-edit-interactive="true" data-traffic2="pandc.vnext.editor_preview.messaging_fab_open.click" data-tccl="ux2.messaging.fab.open,click" class="x-el x-el-div c1-1 c1-2 c1-q c1-r c1-2y c1-2g c1-4 c1-5r c1-bh c1-ch c1-ci c1-cj c1-b c1-c c1-d c1-e c1-f c1-g"><svg viewBox="0 0 24 24" fill="currentColor" width="44" height="44" data-ux="Icon" class="x-el x-el-svg c1-1 c1-2 c1-ck c1-2q c1-3g c1-b c1-c c1-d c1-e c1-f c1-g"><g fill="currentColor"><rect x="4" y="6" width="16" height="10.222" rx="1.129"></rect><path d="M8.977 18.578l.2-2.722a.564.564 0 01.564-.523h3.61c.548 0 .774.705.327 1.024l-3.81 2.721a.564.564 0 01-.89-.5z"></path></g></svg></div>
+                            <div data-ux="Block" data-aid="MESSAGING_FAB" data-edit-interactive="true" data-traffic2="pandc.vnext.editor_preview.messaging_fab_open.click" data-tccl="ux2.messaging.fab.open,click" class="x-el x-el-div c1-1 c1-2 c1-q c1-r c1-2y c1-2g c1-4 c1-5r c1-bh c1-ch c1-ci c1-cj c1-b c1-c c1-d c1-e c1-f c1-g"></div>
                         </div>
                     </div>
                 </div>
