--- a/services.html
+++ b/services.html
@@ -408,7 +408,7 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
 —————————————————————————————-
 */
         
-        @import url('images/blobby/go/font/LeagueSpartan/league-spartan.css');
+        @import url('../img1.wsimg.com/blobby/go/font/LeagueSpartan/league-spartan.css');
         @import url('');
     </style>
     <style data-glamor="cxs-default-sheet">
@@ -2372,10 +2372,10 @@ SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
             </div>
         </div>
     </div>
-    <script src="images/blobby/go/5822f01a-e074-49ca-a850-6d8d6710c7cb/gpub/6ef31983db824c0c/script.js" crossorigin></script>
-    <script src="images/ceph-p3-01/website-builder-data-prod/static/widgets/UX.4.43.0.js" crossorigin></script>
-    <script src="images/blobby/go/5822f01a-e074-49ca-a850-6d8d6710c7cb/gpub/c49d2b83feb0e7a2/script.js" crossorigin></script>
-    <script defer src="images/signals/js/clients/scc-c2/scc-c2.min.js" crossorigin></script>
+    <script src="../img1.wsimg.com/blobby/go/5822f01a-e074-49ca-a850-6d8d6710c7cb/gpub/6ef31983db824c0c/script.js" crossorigin></script>
+    <script src="../img1.wsimg.com/ceph-p3-01/website-builder-data-prod/static/widgets/UX.4.43.0.js" crossorigin></script>
+    <script src="../img1.wsimg.com/blobby/go/5822f01a-e074-49ca-a850-6d8d6710c7cb/gpub/c49d2b83feb0e7a2/script.js" crossorigin></script>
+    <script defer src="../img1.wsimg.com/signals/js/clients/scc-c2/scc-c2.min.js" crossorigin></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
